<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/margin2"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:gravity="center"
        android:text="EDIT TASK"
        android:textColor="@color/darkBlue"
        android:textSize="@dimen/highlightBig"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/nameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:paddingLeft="@dimen/margin2"
        android:text="@string/name"
        android:textColor="@color/black"
        android:textSize="@dimen/textSize1"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/name"
        android:maxLines="5"
        android:minLines="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:textSize="@dimen/textSize2" />

    <TextView
        android:id="@+id/descText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:paddingLeft="@dimen/margin2"
        android:text="@string/description"
        android:textColor="@color/black"
        android:textSize="@dimen/textSize1"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/description"
        android:maxLines="5"
        android:minLines="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:textSize="@dimen/textSize2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin2"
        android:orientation="horizontal">

        <Button
            android:id="@+id/dateBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/red"
            android:text="@string/pick_date" />

        <TextView
            android:id="@+id/dateText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin4"
            android:layout_marginTop="@dimen/margin2"
            android:textColor="@color/darkBlue"
            android:textSize="@dimen/textSize1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin2"
        android:orientation="horizontal">

        <Button
            android:id="@+id/timeBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/red"
            android:text="@string/pick_time" />

        <TextView
            android:id="@+id/timeText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin4"
            android:layout_marginTop="@dimen/margin2"
            android:textColor="@color/darkBlue"
            android:textSize="@dimen/textSize1" />
    </LinearLayout>

    <Button
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin3"
        android:background="@color/darkBlue"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:textSize="@dimen/highlightBig" />
</LinearLayout>